# work_mode

./: 1  README.md  main  pyproject.toml
work_mode/: create_exel.py  ex-3.xlsx  for.py  main.py  work_mode.py
work_mode/docs/: Приложение 1. Бланк Приказа.doc  Приложение 10. Форма Маршрутного листа сотрудника.XLS  Приложение 11. Форма Маршрутного листа для ТОП менеджера.XLS  Приложение 12. Форма приказа об отмене служебной поездки.xls  Приложение 2. Бланк Распоряжения.doc  Приложение 3. Бланк Решения.doc  Приложение 4. Бланк Сопроводительной записки.doc  Приложение 5. Бланк Протокола.doc  Приложение 6. Бланк исходящей-внутренней корреспонденции общий.doc  Приложение 7. Бланк исходящей-внутренней корреспонденции общий (англ.).doc  Приложение 8. Бланк исходящейвнутренней корреспонденции общий для ДЗ и ДЛ.doc  Приложение 9. Бланк исходящейвнутренней корреспонденции для ДЗ и ДЛ (англ.).doc
work_mode/excel_files/: ex-1.xlsx  ex-3.xlsx  prazdnik.xlsx
